<?xml version="1.0"?>
<package format="3">
    <name>livox_ros_driver</name>
    <version>2.0.0</version>
    <description>The ROS device driver for Livox 3D LiDARs and Livox Hub.</description>

    <maintainer email="dev@livoxtech.com">Livox Dev Team</maintainer>

    <license>MIT</license>

    <url type="website">http://wiki.ros.org/livox_ros_driver</url>

    <author email="dev@livoxtech.com">Livox Dev Team</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>apr</depend>
    <depend>git</depend>
    <depend>livox_sdk</depend>
    <depend>nodelet</depend>
    <depend>pcl_ros</depend>
    <depend>pluginlib</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rviz</exec_depend>

    <test_depend>roslaunch</test_depend>

    <export>
      <nodelet plugin="${prefix}/livox_ros_driver_nodelets.xml"/>
    </export>
</package>
